Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112917

sizeBy method of QScatterSeries is not behaving as expected.

    XMLWordPrintable

Details

    • d2275fa17 (dev), 1e5c9e56a (6.4), fe1c81877 (6.5), a17349af5 (tqtc/lts-6.2)

    Description

      Create a QScatterSeries with three points - (2.5, 2.5), (5, 5) and (7.5, 7.5)
      Now call sizeBy method on scatter series by passing sourceData argument as [1, 2, 3], minSize as 10 and maxSize as 20.
      The resulting expected point configuration of points are 10, 15 and 20 respectively. But the actual point configurations we get here are 10, 10 and 20.

      Example to reproduce the bug -

      from PySide6.QtCharts import QChart, QChartView, QScatterSeries, QValueAxis, QXYSeries
      from PySide6.QtWidgets import QMainWindow, QApplication
      from PySide6.QtCore import Qt
      app = QApplication([])
      
      main_window = QMainWindow()
      main_window.resize(500,500)
      chart = QChart()
      x_axis = QValueAxis()
      x_axis.setRange(0,10)
      chart.addAxis(x_axis, Qt.AlignBottom)
      y_axis = QValueAxis()
      y_axis.setRange(0, 10)
      chart.addAxis(y_axis, Qt.AlignLeft)
      
      chart_view = QChartView(chart, main_window)
      main_window.setCentralWidget(chart_view)
      scatter_series = QScatterSeries()
      chart.addSeries(scatter_series)
      scatter_series.attachAxis(x_axis)
      scatter_series.attachAxis(y_axis)
      main_window.show()
      
      scatter_series.append(2.5, 2.5)
      scatter_series.append(5, 5)
      scatter_series.append(7.5, 7.5)
      scatter_series.sizeBy([1, 2, 3], 10, 20)
      scatter_points = scatter_series.points()
      point_sizes = scatter_series.pointsConfiguration()
      print("point at: ", scatter_points[0].x(), ", ", scatter_points[0].y(), ", size: ", point_sizes[0][QXYSeries.PointConfiguration.Size], "\n")
      print("point at: ", scatter_points[1].x(), ", ", scatter_points[1].y(), ", size: ", point_sizes[1][QXYSeries.PointConfiguration.Size], "\n")
      print("point at: ", scatter_points[2].x(), ", ", scatter_points[2].y(), ", size: ", point_sizes[2][QXYSeries.PointConfiguration.Size], "\n")
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tokorpip Tomi Korpipää
            viniyogita viniyogita
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes