Fix sizeBy pointSize calculation

Fixes: QTBUG-112917
Change-Id: Ib2e4f9ae434c863626affcbdfb1ba5c820470eeb
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
(cherry picked from commit d2275fa17016bf61eab5a85f01f70f5a718e218d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>